--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,7 @@
         <module>ruoyi-quartz</module>
         <module>ruoyi-generator</module>
         <module>ruoyi-common</module>
+        <module>ruoyi-booking</module>
     </modules>
     <packaging>pom</packaging>
 
